# PyThurstonian

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: linter.yml
Examples/: simulated_data_example.py
Examples_markdown/: simulated_BTM_example.Rmd  simulated_BTM_example.html
PyThurstonian/: PyThurstonian.py  __init__.py  misc.py  process_samples.py  ranking.py  set_cmdstan_loc.py  setup.py  simulate_data.py
PyThurstonian/stan_model/: thurstonian_cov.stan
misc/: Assess_model.py  accept_reject_simple_thurstonian.py  analyse_VET.py  analyse_complex_simulated.py  analyse_random_aggreement.py  analyse_scs.py  analyse_scs_q2.py  analyse_simple_simulated.py  compare_simple_model.R  master_complex.py  metropolis_thurstonian.py  ordered_vector_tutorial.py  simulate_one_data.py  test_agreement_measures.py  test_distance.py  test_p_values.py  test_parameterisations.py  test_superRanker.R  test_thurstonian.R  test_with_metropolis.py  thurstonian_cov.stan  thurstonian_cov_generate.stan  thurstonian_cov_sigma.stan  thurstonian_simple.stan  transformed_mcmc.py  understand_draw_prob.py  understand_transforms.py
