[tool.poetry]
name = "PyThurstonian"
version = "0.1.0"
description = "Package for fitting Thurstonain models of rank data using Stan"
authors = ["Oscar Giles <ogiles@turing.ac.uk>, Gustav Markkula <G.Markkula@leeds.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
